@@ -7,6 +7,7 @@ PostGIS 2.1.0
   - ST_Raster2WorldCoord, ST_World2RasterCoord (Bborie Park / UC Davis)
   - Tiger Geocoder - Tiger 2011 loader (Regina Obe / Paragon Corporation) 
     Funded by Hunter Systems Group
+  - GEOMETRYCOLLECTION support for ST_MakeValid (Sandro Santilli / Vizzuality)
 
 * Enhancements *
 
